--- a/frontend/src/components/newsfeed_addcontent/add_content.css
+++ b/frontend/src/components/newsfeed_addcontent/add_content.css
@@ -1,15 +1,9 @@
 .add-content-page-container{
     display: block;
     flex-wrap: wrap;
-    /* display: flex-wrap; */
-    /* flex-direction: row; */
     justify-content: center;
     align-items: center;
-    /* text-align: center; */
-    /* width: 100%; */
-    /* height: 100%; */
-    /* align-content: space-around; */
-    /* margin-left: calc(25% - 250px); */
+    margin-left: 10%;
 }
 
 .articles-li {
